--- a/frontend/src/assets/css/Launchpad.css
+++ b/frontend/src/assets/css/Launchpad.css
@@ -1,83 +1,82 @@
 .launchpad-container {
-    text-align: center;
-    padding: 2rem;
-    font-family: Arial, sans-serif;
-  }
-  
-  .launchpad-header h1 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-  }
-  
-  .launchpad-header p {
-    font-size: 1.2rem;
-    color: #555;
-  }
-  
-  .launchpad-buttons {
-    margin: 2rem 0;
-  }
-  
-  .launchpad-buttons .btn {
-    margin: 0.5rem;
-    padding: 0.8rem 1.5rem;
-    font-size: 1rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .btn-primary {
-    background-color: #4caf50;
-    color: white;
-  }
-  
-  .btn-primary:hover {
-    background-color: #45a049;
-  }
-  
-  .btn-secondary {
-    background-color: #008cba;
-    color: white;
-  }
-  
-  .btn-secondary:hover {
-    background-color: #007bb5;
-  }
-  
-  .btn-outline {
-    background-color: white;
-    color: #333;
-    border: 2px solid #333;
-  }
-  
-  .btn-outline:hover {
-    background-color: #333;
-    color: white;
-  }
-  
-  .launchpad-info {
-    margin-top: 2rem;
-    padding: 1rem;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-  }
-  
-  .launchpad-info h2 {
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
-  }
-  
-  .launchpad-info p {
-    font-size: 1rem;
-    color: #666;
-    line-height: 1.5;
-  }
-  
-  .launchpad-footer {
-    margin-top: 2rem;
-    font-size: 0.9rem;
-    color: #999;
-  }
-  
+  text-align: center;
+  padding: 2rem;
+  font-family: Arial, sans-serif;
+}
+
+.launchpad-header h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.launchpad-header p {
+  font-size: 1.2rem;
+  color: #555;
+}
+
+.launchpad-buttons {
+  margin: 2rem 0;
+}
+
+.launchpad-buttons .btn {
+  margin: 0.5rem;
+  padding: 0.8rem 1.5rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+.btn-primary:hover {
+  background-color: var(--dark-primary-color);
+}
+
+.btn-secondary {
+  background-color: #008cba;
+  color: white;
+}
+
+.btn-secondary:hover {
+  background-color: #007bb5;
+}
+
+.btn-outline {
+  background-color: white;
+  color: #333;
+  border: 2px solid #333;
+}
+
+.btn-outline:hover {
+  background-color: #333;
+  color: white;
+}
+
+.launchpad-info {
+  margin-top: 2rem;
+  padding: 1rem;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+}
+
+.launchpad-info h2 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.launchpad-info p {
+  font-size: 1rem;
+  color: #666;
+  line-height: 1.5;
+}
+
+.launchpad-footer {
+  margin-top: 2rem;
+  font-size: 0.9rem;
+  color: #999;
+}
