--- a/frontend/src/assets/css/generate.css
+++ b/frontend/src/assets/css/generate.css
@@ -1,76 +1,76 @@
 .generate-container {
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .generate-title {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #2c3e50;
-  }
-  
-  .generate-form .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .generate-form label {
-    display: block;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #34495e;
-  }
-  
-  .generate-form select,
-  .generate-form textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #dcdcdc;
-    border-radius: 5px;
-    font-size: 1rem;
-  }
-  
-  .generate-form textarea {
-    resize: vertical;
-    height: 100px;
-  }
-  
-  .generate-button {
-    width: 100%;
-    padding: 10px;
-    font-size: 1.125rem;
-    font-weight: bold;
-    color: #fff;
-    background-color: #3498db;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .generate-button:disabled {
-    background-color: #95a5a6;
-    cursor: not-allowed;
-  }
-  
-  .generate-button:hover:enabled {
-    background-color: #2980b9;
-  }
-  
-  .error-message {
-    color: #e74c3c;
-    font-weight: bold;
-    text-align: center;
-  }
-  
-  .success-message {
-    color: #2ecc71;
-    font-weight: bold;
-    text-align: center;
-  }
-  
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: var(--color-cream-50);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+.generate-title {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #2c3e50;
+}
+
+.generate-form .form-group {
+  margin-bottom: 20px;
+}
+
+.generate-form label {
+  display: block;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #34495e;
+}
+
+.generate-form select,
+.generate-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #dcdcdc;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.generate-form textarea {
+  resize: vertical;
+  height: 100px;
+}
+
+.generate-button {
+  width: 100%;
+  padding: 10px;
+  font-size: 1.125rem;
+  font-weight: bold;
+  color: #fff;
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.generate-button:disabled {
+  background-color: #95a5a6;
+  cursor: not-allowed;
+}
+
+.generate-button:hover:enabled {
+  background-color: var(--dark-primary-color);
+}
+
+.error-message {
+  color: #e74c3c;
+  font-weight: bold;
+  text-align: center;
+}
+
+.success-message {
+  color: var(--primary-color);
+  font-weight: bold;
+  text-align: center;
+}
