--- a/frontend/src/assets/css/myDecks.css
+++ b/frontend/src/assets/css/myDecks.css
@@ -1,40 +1,42 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 .decks-container {
-    padding: 20px;
-  }
-  
-  .decks-title {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 30px;
-  }
-  
-  .deck-section {
-    margin-bottom: 40px;
-  }
-  
-  .deck-title {
-    font-size: 1.5rem;
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  
-  .deck-preview-container {
-    display: flex;
-    gap: 15px; /* Space between cards */
-    overflow-x: auto; /* Enable horizontal scrolling */
-    padding: 10px;
-  }
-  
-  .deck-preview-container::-webkit-scrollbar {
-    height: 8px;
-  }
-  
-  .deck-preview-container::-webkit-scrollbar-thumb {
-    background: #888; /* Scrollbar thumb color */
-    border-radius: 4px;
-  }
-  
-  .deck-preview-container::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Scrollbar thumb hover color */
-  }
-  
+  padding: 20px;
+}
+
+.decks-title {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 30px;
+}
+
+.deck-section {
+  margin-bottom: 40px;
+}
+
+.deck-title {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.deck-preview-container {
+  display: flex;
+  gap: 15px; /* Space between cards */
+  overflow-x: auto; /* Enable horizontal scrolling */
+  padding: 10px;
+}
+
+.deck-preview-container::-webkit-scrollbar {
+  height: 8px;
+}
+
+.deck-preview-container::-webkit-scrollbar-thumb {
+  background: #888; /* Scrollbar thumb color */
+  border-radius: 4px;
+}
+
+.deck-preview-container::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Scrollbar thumb hover color */
+}
