--- a/frontend/src/assets/css/navBar.css
+++ b/frontend/src/assets/css/navBar.css
@@ -1,28 +1,27 @@
-
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
 
-  .brand {
-    cursor: pointer;
-    font-size: 1.5rem;
-    background-color: inherit;
-  }
+.brand {
+  cursor: pointer;
+  font-size: 1.5rem;
+  background-color: inherit;
+}
 
-  .links-container {
-    display: flex;
-    align-items: center;
-    background-color: inherit;
-  }
+.links-container {
+  display: flex;
+  align-items: center;
+  background-color: inherit;
+}
 
-  .link {
-    cursor: pointer;
-    margin-right: 20px;
-    background-color: inherit;
-  }
+.link {
+  cursor: pointer;
+  margin-right: 20px;
+  background-color: inherit;
+}
