--- a/frontend/src/assets/css/myDecks.css
+++ b/frontend/src/assets/css/myDecks.css
@@ -20,10 +20,22 @@
 
 .deck-preview-container {
   display: flex;
-  gap: 35px; /* Space between cards */
+  gap: 35px; 
   overflow-x: auto;
   overflow-y: hidden;
   padding: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-preview{
+  transition: transform 0.6s ease-in-out;
+  border: 3px solid #ffffff;
+  border-radius: 12px;
+}
+
+.card-preview:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
 }
 
 .deck-preview-container::-webkit-scrollbar {
