--- a/frontend/src/assets/css/login.css
+++ b/frontend/src/assets/css/login.css
@@ -1,4 +1,3 @@
-/* General Page Styling */
 .login-page {
     display: flex;
     align-items: center;
@@ -7,21 +6,19 @@
     padding: 20px;
   }
 
-  /* Login Container */
   .login-container {
-    background: var(--background-light); /* Matches App.css theme */
     padding: 40px;
     border-radius: 12px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Stronger shadow for contrast */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     text-align: center;
     max-width: 400px;
     width: 100%;
-    border: 1px solid rgba(255, 255, 255, 0.2); /* Subtle border for contrast */
-    backdrop-filter: blur(8px); /* Slight glassmorphism effect */
-    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(8px);
+    background-color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 20vh;
   }
 
-  /* Title and Subtitle */
   .page-title {
     font-size: 2rem;
     margin-bottom: 12px;
@@ -34,7 +31,6 @@
     color:rgb(34, 17, 66);
   }
 
-  /* Form Styling */
   .form {
     display: flex;
     flex-direction: column;
@@ -55,14 +51,12 @@
     outline: none;
   }
 
-/* Error Message */
 .login-container .error-message {
   margin-top: 10px;
   font-size: 0.9rem;
   color: #e74c3c; /* Error red color */
 }
 
-/* Redirect Message */
 .login-container .redirect-message {
   margin-top: 20px;
   font-size: 0.9rem;
@@ -70,7 +64,7 @@
 }
 
 .login-container .link {
-  color: #007bff; /* Link blue color */
+  color: #007bff;
   text-decoration: none;
   font-weight: bold;
 }
