--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -5,12 +5,12 @@ html, body {
   padding: 0;
   background: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0) 85%, /* Subtle fade */
-      rgba(34, 34, 34, 1) /* Dark grey to match the image */
+      rgba(0, 0, 0, 0) 85%,
+      rgba(34, 34, 34, 1)
     ),
     url('../images/background.avif') no-repeat center top;
   background-size: cover;
-  background-attachment: fixed; /* Ensures the background image stays fixed while scrolling */
+  background-attachment: fixed;
   color: #c9d1d9;
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
